[package]
name = "bario-beck"
version = "0.1.0"
edition = "2021"
authors = ["JoaoPedroPP <poloniponce@protonmail.ch>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.6"
actix-web = { version="4", features=["rustls"] }
dotenv = "0.15.0"