[package]
name = "bario-beck"
version = "0.1.0"
edition = "2021"
authors = ["JoaoPedroPP <poloniponce@protonmail.ch>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix-web = { version="4", features=["openssl"] }
dotenv = "0.15.0"
actix-multipart = "0.5.0"
futures-util = "0.3.26"
actix-cors = "0.6.4"
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.3.0"